--- a/charity.css
+++ b/charity.css
@@ -11,7 +11,7 @@ h3 {
 }
 
 body {
-background-color:  #EBE089;
+background-color: #EBE089;
 }
 
 #wrapper {
@@ -38,5 +38,14 @@ background-color:  #EBE089;
     box-sizing: border-box;
     box-shadow: #5EA890;
     border-radius: 5%;
+    margin: auto;
+}
+
+#astrologie {
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    height: 5%;
+    position: absolute;
     margin: auto;
 }
