envois css et js

--- a/charity.css
+++ b/charity.css
@@ -1,35 +1,11 @@
-h1 {
-    text-align: center;
-    color: #5EA890;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-h3 {
-    text-align: center;
-    color:gold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
 body {
-background-image: url("./astrologie.jpeg");
-background-color:#5EA890;
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-}
-
-/*#wrapper {
-    padding-top: 15px;
-    text-align: justify;
-    text-align: center;
-    color:gold;
-    width: 30%;
-    height:60%;
-    border-radius: 5%;
-    margin: auto;
-}*/
-
-
+    background-image: url("./astrologie.jpeg");
+    background-color:#5EA890;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    
+    }
 .astrologie {
     display: flex;
     justify-content: center;
@@ -42,9 +18,7 @@ background-size: cover;
 button {
     color: rgb(57, 3, 3);
 }
-.placeholder {
-width: 100px;
-}
+
 #submit {
     box-sizing: content-box;
     border:groove;
@@ -52,3 +26,29 @@ width: 100px;
     background-color: chocolate;
     font-family: 'Times New Roman', Times, serif;
 }
+
+
+/*h1 {
+    text-align: center;
+    color: #5EA890;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+h3 {
+    text-align: center;
+    color:gold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+
+#wrapper {
+    padding-top: 15px;
+    text-align: justify;
+    text-align: center;
+    color:gold;
+    width: 30%;
+    height:60%;
+    border-radius: 5%;
+    margin: auto;
+}*/
