--- a/charity.css
+++ b/charity.css
@@ -1,3 +1,37 @@
+
+section {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type=text] {
+    width: 160px;
+    padding: 8px 20px 8px 45px;
+    border: white solid 2px;
+    font-size: 18px;
+    border-radius: 25px;
+    background-position: 2% 50%;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    background-image: url('search.svg');
+    background-color: transparent;
+    background: rgba(255,255,255,0.4);
+    transition: 0.5s all ease-in-out;
+    filter: brightness(170%);
+}
+
+input[type=text]:focus,
+input[type=text]:not(:placeholder-shown) {
+    width: 350px;
+    background-color: transparent;
+    background: rgba(255,255,255,0.4);
+    filter: brightness(100%);
+}
+
+
 body {
     background-image: url("./astrologie.jpeg");
     background-color:#5EA890;
@@ -14,41 +48,3 @@ body {
     height: 15%;
     border-radius: 5% 5% 5%;
 }
-
-button {
-    color: rgb(57, 3, 3);
-}
-
-#submit {
-    box-sizing: content-box;
-    border:groove;
-    box-shadow: 5px 5px 5px rgba(255, 166, 0, 0.486);
-    background-color: chocolate;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-
-/*h1 {
-    text-align: center;
-    color: #5EA890;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-h3 {
-    text-align: center;
-    color:gold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-
-
-#wrapper {
-    padding-top: 15px;
-    text-align: justify;
-    text-align: center;
-    color:gold;
-    width: 30%;
-    height:60%;
-    border-radius: 5%;
-    margin: auto;
-}*/
