--- a/charity.css
+++ b/charity.css
@@ -20,6 +20,60 @@ body {
     height: 100vh;
 }
 
+.menu{
+    width:50%;
+    height: 50vh;          
+    position: absolute;
+    padding: 35px;
+    top:0px;
+    right: 0px;
+}
+.menu ul{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: right;            
+    background:transparent;            
+    z-index: 2;
+}
+.menu ul li{
+    list-style: none;
+    display : inline-block;
+    font-size: 18px;
+    font-weight: 500 ;
+    color: white;
+    cursor: pointer;
+    z-index:2;
+    transition:color 0.6s;
+ }
+
+.menu ul li::after{
+    content:'';
+    background:black;
+    width: 100%;
+    height:100%;
+    border-radius: 30px ;
+    top:100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index:-1;
+    opacity: 0;
+    transition: top 0.5s, opacity 0.5s;
+    
+ }
+
+.menu ul li:hover{
+    color:white ;
+ }
+
+.menu ul li:hover::after{
+    top: 50%;
+    opacity: 1;
+ }
+  
+
 .wrapper {
     width: 100%;
     height: 100vh;
@@ -29,24 +83,24 @@ body {
 }
 
 .wrapper input[type=text] {
-    width: 160px;
+    width: 190px;
     padding: 8px 20px 8px 45px;
     border: white solid 2px;
-    font-size: 18px;
+    font-size: 20px;
     border-radius: 25px;
     background-position: 2% 50%;
     background-repeat: no-repeat;
-    background-size: 30px;
+    background-size: 40px;
     background-color: transparent;
     transition: 0.5s all ease-in-out;
-    filter: brightness(170%);
+    box-shadow: 0 25px 20px -20px rgba(0, 0, 0, 0.4);
     z-index: 2;
 }
 
 .wrapper input[type=text]:focus,
 .wrapper input[type=text]:not(:placeholder-shown) {
     width: 350px;
-    background-color: transparent;
+    background-color: white;
     filter: brightness(100%);
 }
 .quotidien {
@@ -56,7 +110,6 @@ body {
     font-size: 15px;
     padding: 8px 20px 8px 45px;
     background-size: 25px;
-    box-shadow: 0 25px 20px -20px rgba(0, 0, 0, 0.4);
     display:flex;
     flex-direction:column;
     position:absolute;
@@ -66,7 +119,7 @@ body {
 }
 .quotidien::after{
     content:'';
-    background:black;
+    background:white;
     width: 100%;
     height:100%;
     border-radius: 30px ;
@@ -80,7 +133,7 @@ body {
 
 }
 .quotidien:hover{
-    color:white ;
+    color:black ;
 }
 .quotidien:hover::after{
     top: 50%;
@@ -94,7 +147,6 @@ body {
     font-size: 15px;
     background-size: 25px;
     padding: 8px 20px 8px 45px;
-    box-shadow: 0 25px 20px -20px rgba(0, 0, 0, 0.4);
     display:flex;
     flex-direction: column;
     position:absolute;
@@ -104,7 +156,7 @@ body {
 }
 .hebdomadaire::after{ 
     content:'';
-    background:black;
+    background:white;
     width: 100%;
     height:100%;
     border-radius: 30px ;
@@ -117,7 +169,7 @@ body {
     transition: top 0.5s, opacity 0.5s;
 }
 .hebdomadaire:hover{ 
-    color:white ;
+    color:black ;
 }
 .hebdomadaire:hover::after{ 
     top: 50%;
@@ -140,12 +192,12 @@ body {
     position:absolute;
     bottom: 470px;
     color:white;
-    text-shadow: 0 0 5px white;
+    text-shadow: 0 0 8px white;
     line-height: 80px;
     letter-spacing: -1px;
     line-height: 1; 
     text-align: center;
-    z-index: 1;
+    z-index: 2;
      }
 
 .content p{
@@ -160,5 +212,27 @@ body {
     z-index: 4;
     text-align: center;
 }
+.conteneur{
+    color:white;
+    background: rgb(227,173,219);
+    background: linear-gradient(90deg, rgba(227,173,219,1) 25%, rgba(185,127,173,1) 53%, rgba(127,158,186,1) 99%);
+    border-color: white solid 2px;    
+    position: relative;
+    bottom: 175px;
+    margin: auto;
+    width: 50%;
+    height: 20%;
+    border-radius: 12px 15px 22px;   
+    text-align: justify;
+    padding: 12px;        
+}
+.conteneur::before{
+    display:block;
+}
+
+.error{
+    display:none
+}
+
 
 
